# mc_manus_plugin

./: .gitignore  CMakeLists.txt  README.md
bag/rosbag2_2025_10_09-17_11_23/: metadata.yaml
cmake/: mc_cameraConfig.cmake.in  mc_manusConfig.cmake.in
etc/: CameraPlugin.yaml  ManusPlugin.yaml
include/mc_manus/: ManusDevice.h
log/: latest_list
src/: CameraDevice.cpp  CameraDevice.h  CameraPlugin.cpp  CameraPlugin.h  ManusDevice.cpp  ManusDevice.h  ManusPlugin.cpp  ManusPlugin.h
tests/: CMakeLists.txt  main.cpp
tests/etc/: mc_rtc.yaml
